@@ -8,6 +8,7 @@ iRedMail-0.9.3:
           plugin 'amavisd_wblist'.
 
     * Fixed issues:
+        - Incorrect Dovecot Master User account used by SOGo.
         - Dovecot Master User doesn't work with LDAP backend.
         - Incorrect quota warning priorities in Dovecot.
           Thanks Peter <rs _at_ samplezone.ch> for the feedback.
